--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,6 @@
   <img>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <img src="../public/images/pandamonium.png" alt="panda">
+    <img src="./images/pandamonium.png" alt="panda">
   </body>
 </html>
