style: added a id to p-tag

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   </head>
   <img>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p id="welcomeText">Welcome to <%= title %></p>
     <img src="./images/pandamonium.png" alt="panda">
   </body>
 </html>
